Fixed Portfolio Item Alignment

--- a/public_html/assets/css/main.css
+++ b/public_html/assets/css/main.css
@@ -395,10 +395,9 @@ footer p {
     display: none;
 }
 .pitem {
-    margin-top: 5%;
+    margin: 5% 0 6% 0;
     text-align: center;
     display: inline-block;
-    margin-bottom: 6%;
     zoom: 1;
     letter-spacing: normal;
     word-spacing: normal;
@@ -408,7 +407,6 @@ footer p {
     padding-right: 5px;
     padding-bottom: 15px;
 
-
     /* MATERIAL CARD HOVER EFFECT */
     background: #fff;
     border-radius: 2px;
@@ -416,6 +414,20 @@ footer p {
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
+.portfolio {
+    margin-top: 5%;
+}
+@media screen and (min-width: 992px){
+    .pitem {
+        height: 580px;
+    }
+}
+@media screen and (max-width: 991px){
+    .portfolio {
+        margin: 5% 12px 0 12px;
+    }
+}
+
 .pitem:hover{
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     z-index: 999;
@@ -467,10 +479,6 @@ footer p {
     display: inline-block;
     position: relative;
     margin-top: 10%;
-}
-
-.portfolio {
-    margin-top: 5%;
 }
 .pitem:nth-child(2), .minor.col-md-3:nth-child(3) {
     border: 0;
